<resources>
    <string name="app_name">IntentEgif</string>
    <string name="move_activity">PINDAH AKTIVITY</string>
    <string name="move_with_data">PINDAH AKTIVITY</string>
    <string name="dial_number">PANGGIL TELEPON</string>
    <string name="move_with_result">PINDAH AKTIVITY UNTUK RESULT</string>
    <string name="result_froms_activity">HASIL DARI AKTIVITY</string>
    <string name="shoose_hobby">PILIHAN HOBBY YANG DISUKAI</string>
    <string name="_baddminton">BULUTANGKIS</string>
    <string name="_vollyball">VOLLY</string>
    <string name="_cooking">MEMASAK</string>
    <string name="choose">PILIH</string>
    <string name="data_received">DATA DITERIMA</string>
    <string name="this_ismove_activity">INI PINDAH AKTIVITY</string>
</resources>